# discovery

./: index.html  print.html  toc.js
f3discovery/: toc.js
f3discovery/src/: openocd.gdb
f3discovery/src/05-led-roulette/: Cargo.toml
f3discovery/src/05-led-roulette/auxiliary/: Cargo.toml
f3discovery/src/05-led-roulette/src/: main.rs
f3discovery/src/06-hello-world/auxiliary/: Cargo.toml
f3discovery/src/07-registers/auxiliary/: Cargo.toml
f3discovery/src/07-registers/auxiliary/src/: lib.rs
f3discovery/src/08-leds-again/auxiliary/: Cargo.toml
f3discovery/src/08-leds-again/src/: main.rs
f3discovery/src/09-clocks-and-timers/: Cargo.toml
f3discovery/src/09-clocks-and-timers/auxiliary/: Cargo.toml
f3discovery/src/09-clocks-and-timers/auxiliary/src/: lib.rs
f3discovery/src/09-clocks-and-timers/src/: main.rs
f3discovery/src/11-usart/: Cargo.toml
f3discovery/src/11-usart/auxiliary/: Cargo.toml
f3discovery/src/14-i2c/auxiliary/: Cargo.toml
f3discovery/src/15-led-compass/auxiliary/: Cargo.toml
f3discovery/src/16-punch-o-meter/: Cargo.toml
f3discovery/src/16-punch-o-meter/auxiliary/: Cargo.toml
microbit/: Cargo.toml  toc.js
microbit/src/03-setup/: Cargo.toml
microbit/src/05-led-roulette/: Cargo.toml
microbit/src/05-led-roulette/src/: main.rs
microbit/src/07-uart/: Cargo.toml
microbit/src/07-uart/src/: main.rs  serial_setup.rs
microbit/src/08-i2c/: Cargo.toml
microbit/src/08-i2c/src/: main.rs
microbit/src/09-led-compass/: Cargo.toml
microbit/src/09-led-compass/src/: calibration.rs  led.rs  main.rs
microbit/src/10-punch-o-meter/: Cargo.toml
microbit/src/10-punch-o-meter/src/: main.rs
microbit/src/11-snake-game/: Cargo.toml
microbit/src/11-snake-game/src/: main.rs
microbit/src/99-robot/: Cargo.toml
microbit/src/99-robot/robot/: robotbit.rs
microbit/src/99-robot/src/: main.rs  robot.rs
microbit/src/99-robot/src/robot/: hcsr04.rs  pca9685.rs  robotbit.rs  tm1650.rs
