[package]
name = "rtt-check"
version = "0.1.0"
authors = ["Henrik Böving <hargonix@gmail.com>"]
edition = "2021"

[dependencies]
#cortex-m = "0.7.7"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
rtt-target = "0.6.1"
#rtt-target = { version =  "0.4.0", features = ["cortex-m"] }
#panic-rtt-target = { version =  "0.1.2", features = ["cortex-m"] }
panic-rtt-target = "0.2.0"