[package]
name = "uart"
version = "0.1.0"
authors = ["Henrik Böving <hargonix@gmail.com>"]
edition = "2021"

[dependencies.microbit-v2]
version = "0.15.1"
optional = true

[dependencies.microbit]
version = "0.15.1"
optional = true

[dependencies]
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.5"
rtt-target = "0.6.1"
# rtt-target = { version = "0.4.0", features = ["cortex-m"] }
# panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
panic-rtt-target = "0.2.0"
nb = "1.1.0"
heapless = "0.8.0"
embedded-hal = "0.2.7"

[features]
default = ["v2"]
v2 = ["microbit-v2"]
v1 = ["microbit"]
