[package]
name = "punch-o-meter"
version = "0.1.0"
authors = ["Henrik Böving <hargonix@gmail.com>"]
edition = "2018"

[dependencies.microbit-v2]
version = "0.15.0"
optional = true

[dependencies.microbit]
version = "0.15.0"
optional = true

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
rtt-target = "0.5.0"
# rtt-target = { version = "0.4.0", features = ["cortex-m"] }
# panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
panic-rtt-target = "0.1.3"
lsm303agr = "1.0.0"
nb = "1.1.0"
embedded-hal = "1.0.0"

[features]
default = ["v2"]
v2 = ["microbit-v2"]
v1 = ["microbit"]
