[package]
name = "robot"
version = "0.1.0"
edition = "2021"

[dependencies]
microbit-v2 = { version = "0.15.1", features = ["embedded-hal-02"]}
# cortex-m = "0.7.7"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.5"
# rtt-target = { version = "0.3.1", features = ["cortex-m"] }
rtt-target = "0.6.1"
# panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
panic-rtt-target = "0.2.0"
lsm303agr = "1.1.0"
nb = "1.1.0"
libm = "0.2.11"
heapless = "0.8.0"
tiny-led-matrix = "1.0.2"
embedded-hal = "1.0.0"
pwm-pca9685 = "1.0.0"
panic-halt = "1.0.0"
