[package]
authors = [
    "Jorge Aparicio <jorge@japaric.io>",
    "Wink Saville <wink@saville.com",
]
edition = "2018"
name = "aux7"
version = "0.2.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.6.15"
stm32f3-discovery = "0.7.2"
panic-itm = "0.4.2"

[dependencies.stm32f3]
version = "0.15.1"
features = ["stm32f303", "rt"]
